# C-learn

./: .gitignore  CMakeLists.txt  README.md
exercises/: README.md
exercises/week01_memory/: CMakeLists.txt  README.md  main.cpp
exercises/week02_raii/: CMakeLists.txt  README.md  main.cpp
notes/: english-glossary.md  progress.md
roadmap/: README.md
roadmap/00_environment/: README.md
roadmap/01_fundamentals/: README.md
roadmap/02_stl_modern_cpp/: README.md
roadmap/03_systems_winapi/: README.md
roadmap/04_re_game_hacking/: README.md
roadmap/05_specialization/: README.md
src/: main.cpp
